VM_Version_init() print buffer is too small

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b116
    • generic
    • generic

        if (PrintMiscellaneous && Verbose) {
          char buf[512];
          os::print_cpu_info(tty, buf, sizeof(buf));

      512 is not enough:

      CPU Model and flags from /proc/cpuinfo:
      model name : Intel(R) Core(TM) i7-6700K CPU @ 4.00GHz
      flags : fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts mmx fxsr sse sse2 ss syscall nx pdpe1gb rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology tsc_reliable nonstop_tsc aperfmperf eagerfpu pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt tsc_deadline_timer aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch ida arat epb pln pts dtherm hwp hwp_noitfy hwp_act_window hwp_epp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 invpcid rtm rheap address: 0x0000000083600000, size: 1994 MB, Compressed Oops mode: 32-bit

            Assignee:
            Coleen Phillimore
            Reporter:
            Vladimir Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: