8151939: VM_Version_init() print buffer is too small

Increase buffer size, use logging to print out version and os information

Reviewed-by: kvn, rprotacio, mockner